// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separators test should render a single separator 1`] = `
<div>
  <svg>
    <line
      stroke="black"
      stroke-width="4"
      x1="154.5"
      x2="165.5"
      y1="271.5"
      y2="271.5"
    />
  </svg>
</div>
`;

exports[`Separators test should render multiple separators 1`] = `
<div>
  <svg>
    <line
      stroke="black"
      stroke-width="4"
      x1="218.5"
      x2="229.5"
      y1="79.5"
      y2="79.5"
    />
    <line
      stroke="black"
      stroke-width="4"
      x1="282.5"
      x2="293.5"
      y1="79.5"
      y2="79.5"
    />
    <line
      stroke="black"
      stroke-width="4"
      x1="378.5"
      x2="389.5"
      y1="79.5"
      y2="79.5"
    />
  </svg>
</div>
`;

exports[`Separators test should render two separators 1`] = `
<div>
  <svg>
    <line
      stroke="black"
      stroke-width="4"
      x1="218.5"
      x2="229.5"
      y1="79.5"
      y2="79.5"
    />
    <line
      stroke="black"
      stroke-width="4"
      x1="80.5"
      x2="80.5"
      y1="283.5"
      y2="294.5"
    />
  </svg>
</div>
`;
